dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT
dnl AC_CONFIG_AUX_DIR(config)
dnl AM_CONFIG_HEADER(config/config.h)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(Storage, 1.0, no-define)

dnl Initialize for LOFAR (may set compilers)
lofar_INIT

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_YACC
AC_PROG_CC
AC_PROG_CXX
AM_PROG_LEX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_DISABLE_SHARED
AC_PROG_LIBTOOL

dnl Checks for libraries.

dnl dnl Replace `main' with a function in -lfl:
dnl AC_CHECK_LIB(fl, main)
dnl dnl Replace `main' with a function in -lcosev_r:
dnl AC_CHECK_LIB(cosev_r, main)
dnl dnl Replace `main' with a function in -lcosnm_r:
dnl AC_CHECK_LIB(cosnm_r, main)
dnl dnl Replace `main' with a function in -lorb_r:
dnl AC_CHECK_LIB(orb_r, main)
dnl dnl Replace `main' with a function in -lpthread:
dnl AC_CHECK_LIB(pthread, main)
dnl dnl Replace `main' with a function in -lvport_r:
dnl AC_CHECK_LIB(vport_r, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_VPRINTF

dnl
dnl Check for LOFAR specific things
dnl
lofar_GENERAL
dnl lofar_BLITZ
lofar_MPI
lofar_AIPSPP(0,"-lms -lmeasures -ltables -lscimath -lscimath_f -lcasa")

lofar_INTERNAL(LCS/Common,Common,,1,Common/LofarTypedefs.h,,)
dnl lofar_INTERNAL(LCS/Transport,Transport,,1,Transport/DataHolder.h,,)
lofar_INTERNAL(LCS/AMC/AMCBase,AMCBase,,1,AMCBase/Epoch.h,,)
dnl lofar_INTERNAL(CEP/tinyCEP,tinyCEP,,1,tinyCEP/TinyDataManager.h,,)
dnl lofar_INTERNAL(CEP/CEPFrame,CEPFrame,,1,CEPFrame/DataManager.h,,)
lofar_INTERNAL(RTCP/Interface,Interface,,1,Interface/Parset.h,,)
dnl The property interface is not used right now
dnl lofar_INTERNAL(MAC/GCF/GCFCommon,GCFCommon,,1,GCF/GCF_PVString.h,gcfcommon)
dnl lofar_INTERNAL(MAC/GCF/PALlight,PALlight,,1,GCF/PALlight/CEPPropertySet.h,gcfceppallight)

lofar_EXTERNAL(boost,1,boost/thread.hpp,"boost_date_time")

dnl
dnl Output Makefiles
dnl
AC_OUTPUT(
include/Makefile
include/Storage/Makefile
src/Makefile
test/Makefile
Makefile
Storage.spec
)
