testdir		 =  $(prefix)/stationtest/tc
test_SCRIPTS = 	bist.py \
				cdo_ctrl.py \
				empty.py \
				hba_client.py \
				hba_server.py \
				prsg.py \
				rad_lanemode.py \
				rad_latency.py \
				serdes.py \
				spustat.py \
				status.py \
				sync_delay.py \
				tdstat.py

include $(top_srcdir)/Makefile.common
